# Wiki-Analyzer

./: .gitignore  README.md  Wiki-Analyzer.cmd  Wiki-Analyzer.sh  pyproject.toml  requirements.txt  test_morpheme.ipynb  train_word2vec_model.ipynb
devscripts/: run_main_func.py
wiki_analyzer/: __init__.py  __main__.py  config.py  corpus_manager.py  database_initializer.py  wiki.py  wiki_database.py  wiki_text_processor.py
wiki_analyzer/corpus/: __init__.py  corpus_manager.py
wiki_analyzer/database/: __init__.py  common.py  constants.py  database_manager.py  wiki_table_manager.py
wiki_analyzer/database/table_handlers/: __init__.py  wiki_contents.py  wiki_pages.py  wiki_tokenized.py
wiki_analyzer/text_processing/: __init__.py  tokenizer.py
wiki_analyzer/utils/: __init__.py  file_util.py  logger.py
